Fix spacing for error states

--- a/src/styles/components/sites/_unauthorized.scss
+++ b/src/styles/components/sites/_unauthorized.scss
@@ -4,11 +4,13 @@
   display: flex;
   height: 100%;
   justify-content: center;
+  padding: 3rem 0 4rem 0;
 
   .container {
     border-radius: var(--border-radius-lg);
     padding: 2rem;
     text-align: center;
+    padding: 0;
 
     h2 {
       margin: 4rem 0 2rem 0;
