--- a/src/styles/pages/sites/[site_id]/_team.scss
+++ b/src/styles/pages/sites/[site_id]/_team.scss
@@ -1,6 +1,8 @@
 .page.team {
   background: var(--white);
+  display: flex;
   flex: 1;
+  flex-direction: column;
 
   .title {
     align-items: center;
